🐛 Fix text overlapping caused by content-box position

--- a/src/styles/layouts/_start-section.scss
+++ b/src/styles/layouts/_start-section.scss
@@ -31,7 +31,7 @@
 
   .col-sm-4 {
     position: relative;
-    top: -130px;
+    top: -50px;
 
     .content-box {
       @include pos-center();
